--- a/index.html
+++ b/index.html
@@ -3321,7 +3321,7 @@ R^2 = 1 - \frac{\sum{(y_i - \hat{y})^2}}{\sum{(y_i - \bar{y})^2}} \tag{3}
 <p>Ultimately, <span class="math inline">\(R^2\)</span> and MSE are related in that they both measure the model’s performance, but they do it in different ways. While <span class="math inline">\(R^2\)</span> measures the proportion of variance explained by the model, MSE measures the average error of the model’s predictions. In the context of cross-validation, both metrics can be used to compare models: a higher <span class="math inline">\(R^2\)</span> and a lower MSE would typically indicate a better predictive model.</p>
 </section>
 <section id="cross-validation-techniques" class="level2">
-<h2 class="anchored" data-anchor-id="cross-validation-techniques">Cross-validation Techniques</h2>
+<h2 class="anchored" data-anchor-id="cross-validation-techniques">Cross-Validation Techniques</h2>
 <p>There are many techniques of cross-validation, the one being used depending on what needs to be accomplished. Many of which, mentioned in the introduction. The following will introduce some of those important techniques, as well as others, and research that delve deeper into their purpose.</p>
 <p><span class="citation" data-cites="jung2015ak">(<a href="#ref-jung2015ak" role="doc-biblioref">Jung and Hu 2015</a>)</span> introduce an advanced k-fold averaging cross-validation procedure, advocating for the averaging of parameter estimates across folds to yield more stable and efficient outcomes. This method demonstrates significant potential in handling high-dimensional data and improving parameter estimation.</p>
 <p><strong>For the k-fold cross-validation process, the steps are as follows and see Figure 1:</strong></p>
@@ -3363,7 +3363,7 @@ MCCV_{n_v}(\phi)=\frac{1}{Nn_v}\sum_{i=1}^{k}(y_{(s_v)(i)}-\hat{y}_{\phi(s_v)(i)
 <section id="data-description-and-visualization" class="level3">
 <h3 class="anchored" data-anchor-id="data-description-and-visualization">Data Description and Visualization</h3>
 <p>This heart failure clinical records dataset, obtained via the UC Irvine Machine Learning Repository, contains the medical records of 299 patients who had heart failure, collected during their follow-up period, where each patient profile has 13 clinical features <span class="citation" data-cites="chicco2020machine">(<a href="#ref-chicco2020machine" role="doc-biblioref">Chicco and Jurman 2020</a>)</span>.</p>
-<p>More specifically, the dataset comprises medical records of 299 heart failure patients from Faisalabad, Pakistan, collected between April and December 2015. It includes 13 clinical, body, and lifestyle features. The dataset was used to facilitate machine learning predictions on patient survival based solely on serum creatinine and ejection fraction levels. Various machine learning and biostatistical methods were employed for binary classification of survival, feature ranking, and to examine the predictability of survival using the mentioned key features. This study aims to demonstrate the potential of specific biomarkers in predicting heart failure outcomes and to streamline the prediction process for medical practitioners. Notably, <span class="citation" data-cites="de2020cross">(<a href="#ref-de2020cross" role="doc-biblioref">Rooij and Weeda 2020</a>)</span> highlight the ways in which cross-validation can be implemented on a dataset, such as ours, through different cross-validation methods and techniques.</p>
+<p>More specifically, the dataset comprises medical records of 299 heart failure patients from Faisalabad, Pakistan, collected between April and December 2015. It includes 13 clinical, body, and lifestyle features, both categorical and continuous. The dataset was used to facilitate machine learning predictions on patient survival based solely on serum creatinine and ejection fraction levels. Various machine learning and biostatistical methods were employed for binary classification of survival, feature ranking, and to examine the predictability of survival using the mentioned key features. This study aims to demonstrate the potential of specific biomarkers in predicting heart failure outcomes and to streamline the prediction process for medical practitioners. Notably, <span class="citation" data-cites="de2020cross">(<a href="#ref-de2020cross" role="doc-biblioref">Rooij and Weeda 2020</a>)</span> highlight the ways in which cross-validation can be implemented on a dataset, such as ours, through different cross-validation methods and techniques.</p>
 <p>Our data description is as follows:</p>
 <table class="table">
 <colgroup>
@@ -3491,8 +3491,8 @@ MCCV_{n_v}(\phi)=\frac{1}{Nn_v}\sum_{i=1}^{k}(y_{(s_v)(i)}-\hat{y}_{\phi(s_v)(i)
 </div>
 </div>
 </section>
-<section id="categorical-data" class="level4">
-<h4 class="anchored" data-anchor-id="categorical-data">Categorical Data</h4>
+<section id="categorical-variables" class="level4">
+<h4 class="anchored" data-anchor-id="categorical-variables">Categorical Variables</h4>
 <div class="cell">
 <details class="code-fold">
 <summary>Code</summary>
@@ -3533,6 +3533,7 @@ MCCV_{n_v}(\phi)=\frac{1}{Nn_v}\sum_{i=1}^{k}(y_{(s_v)(i)}-\hat{y}_{\phi(s_v)(i)
                        0 </code></pre>
 </div>
 </div>
+<p>We found the total number of missing values for each variable, and none were found. The analysis can continue without deleting rows or imputation of values.</p>
 </section>
 <section id="checking-for-outliers" class="level4">
 <h4 class="anchored" data-anchor-id="checking-for-outliers">Checking for Outliers</h4>
