--- a/indextoslides2.html
+++ b/indextoslides2.html
@@ -97,6 +97,7 @@
     code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </style>
   <link rel="stylesheet" href="indextoslides2_files/libs/revealjs/dist/theme/quarto.css">
+  <link rel="stylesheet" href="fontsize.css">
   <link href="indextoslides2_files/libs/revealjs/plugin/quarto-line-highlight/line-highlight.css" rel="stylesheet">
   <link href="indextoslides2_files/libs/revealjs/plugin/reveal-menu/menu.css" rel="stylesheet">
   <link href="indextoslides2_files/libs/revealjs/plugin/reveal-menu/quarto-menu.css" rel="stylesheet">
